# dojiwick2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  KICKOFF.md  Makefile  README.md  compose.ci.yaml  compose.yaml  config.toml  config1.toml  config2.toml  config3.toml  params_trial3.json  params_trial5320.json  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.github/workflows/: ci.yml
db/: atlas.hcl  schema.sql
db/initdb/: 20_create_test_db.sql
db/migrations/: 20260228_000001_v3_baseline.sql  20260314_000001_add_cancelled_execution_status.sql  20260314_000002_add_realized_pnl_exchange.sql  20260315_000001_remove_order_request_defaults.sql  20260315_000002_add_native_fee_tracking.sql  20260710221803_v3_baseline.sql  20260711152800_add_funding_rates.sql  20260711162619_drop_adaptive_and_unused_enums.sql  20260711163319_add_order_lifecycle_and_exit_state.sql  20260711182831_add_backtest_daily_sharpe.sql  atlas.sum
research/: config1.toml  config2.toml  config3.toml  config_v39_7269.toml  config_v40_6857.toml  exp_no_trend_volatile.toml  exp_volatile_rebalance.toml  params_trial7109.json  params_v39_trial7269.json  params_v39_trial7938.json  params_v39_trial8897.json  params_v39_trial9671.json  params_v39_trial9706.json  params_v40_trial6857.json  params_v40_trial7782.json  params_v40_trial8488.json  params_v40_trial9478.json
research/results/: oos_analysis.txt  v38-promotion-report.md  v41_baseline_analysis.txt  v41_baseline_report.md
scripts/: aws-optimize.sh  hetzner-optimize.sh
src/dojiwick/: __init__.py
tests/: conftest.py
tests/db/: conftest.py  test_pg_adaptive_calibration_repository.py  test_pg_adaptive_config_repository.py  test_pg_adaptive_outcome_repository.py  test_pg_adaptive_posterior_repository.py  test_pg_adaptive_selection_repository.py  test_pg_audit_log.py  test_pg_backtest_run_repository.py  test_pg_bot_config_snapshot_repository.py  test_pg_bot_state_repository.py  test_pg_candle_repository.py  test_pg_decision_trace_repository.py  test_pg_fill_hwm.py  test_pg_fill_repository.py  test_pg_funding_rate_repository.py  test_pg_instrument_repository.py  test_pg_model_cost_repository.py  (+19 more)
(+425 files in other folders)
