[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dojiwick"
version = "2.0.0"
description = "Batch-first deterministic trading engine."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.9",
    "psycopg-pool>=3.3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
dojiwick = "dojiwick.interfaces.cli.main:main"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2", "psycopg_pool>=3.2"]
optuna = ["optuna>=4.0", "sqlalchemy>=2.0"]
ai = ["anthropic>=0.40"]
exchange = ["aiohttp>=3.9"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.15",
    "basedpyright>=1.31.4",
    "hypothesis>=6.100",
    "aiohttp>=3.9",
    "psycopg[binary]>=3.2",
    "optuna>=4.0",
    "sqlalchemy>=2.0",
    "anthropic>=0.40",
    "pandas>=3.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dojiwick"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]
cache-dir = ".cache/ruff"
extend-exclude = [".cache"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", ".cache"]
extraPaths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that compose multiple services",
    "e2e: end-to-end infrastructure tests",
    "slow: tests that take more than a few seconds",
    "db: tests requiring a running PostgreSQL instance",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:psycopg.*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    ".cache/*",
    ".venv/*",
    "db/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
